added one more endpoint in the swagger and corresponding services and controllers
