# src/main/java/com/investment/advice/server/services/PortfolioAssetsService.java
@@ -1,0 +1,9 @@
+package com.investment.advice.server.services;
+
+import io.swagger.model.Asset;
+
+import java.util.List;
+
+public interface PortfolioAssetsService {
+    List<Asset> getAssets(Integer portfolioId);
+}
